Fixed wrong colors

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: $c-blue;
+  border-radius: 0 200px 0 0;
 
   &__content {
     display: flex;
@@ -281,10 +282,6 @@
     text-transform: uppercase;
     transition: color 0.5s linear;
 
-    &:visited {
-      color: rgba(129, 6, 123, 0.98);
-    }
-
     &:hover {
       color: rgb(97, 50, 184);
     }
@@ -313,6 +310,12 @@
   @media (min-width: 320px) and (max-width: 1279px) {
     & {
       padding: 48px 5% 0;
+    }
+  }
+
+  @media (max-width: 1023px) {
+    & {
+      border-radius: 0 100px 0 0;
     }
   }
 }
