--- a/src/styles/blocks/hire-us.scss
+++ b/src/styles/blocks/hire-us.scss
@@ -12,10 +12,6 @@
   text-transform: uppercase;
   transition: color 0.5s linear;
 
-  &:visited {
-    color: rgba(129, 6, 123, 0.98);
-  }
-
   &:hover {
     color: rgb(97, 50, 184);
     cursor: pointer;
