--- a/src/styles/blocks/hiring-items.scss
+++ b/src/styles/blocks/hiring-items.scss
@@ -37,10 +37,6 @@
     background-color: $c-light-red;
     transition: color 0.5s linear, background-color 0.5s linear;
 
-    &:visited {
-      color: rgba(129, 6, 123, 0.98);
-    }
-
     &:hover {
       color: rgb(97, 50, 184);
       background-color: $c-light-red-alpha;
