--- a/src/styles/blocks/process-card.scss
+++ b/src/styles/blocks/process-card.scss
@@ -134,10 +134,6 @@
       text-decoration: none;
       transition: color 0.5s;
 
-      &:visited {
-        color: rgba(129, 6, 123, 0.98);
-      }
-
       &:hover {
         color: $c-blue;
         cursor: pointer;
