--- a/src/styles/blocks/strategy.scss
+++ b/src/styles/blocks/strategy.scss
@@ -54,10 +54,6 @@
     background-color: $c-light-red;
     transition: color 0.5s linear, background-color 0.5s linear;
 
-    &:visited {
-      color: rgba(129, 6, 123, 0.98);
-    }
-
     &:hover {
       color: $c-light-red;
       background-color: $c-light-red-alpha;
