--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,7 +6,7 @@ $c-light-red-alpha: rgba(255, 156, 142, 0.5);
 $c-header: #253757;
 $c-text: #6c788b;
 $c-label: #c0cdd7;
-$c-background: #e5e5e5;
+$c-background: #f2f9f9;
 $c-transparent: rgba(255, 255, 255, 0);
 $c-white-transparent: rgba(255, 255, 255, 0.7);
 $header-height: 120px;
